// =============================================================================
// billing-service / billing_db
// Spring microservice database boundary: billing-service
//
// FK politikasi:
//   * Servis ICI iliskiler fiziksel FK ile kurulur.
//   * customerId, subscriptionId gibi servis DISI referanslar yalnizca UUID
//     olarak tutulur, FK YOKTUR.
// =============================================================================

Table BILLING_SERVICE_BILLING_ACCOUNT {
  id uuid [primary key]
  customerId uuid [unique, not null, note: 'logical ref -> customer-service.CUSTOMER.id']
  currency varchar
  balance numeric
  creditLimit numeric
  status varchar [note: 'ACTIVE | SUSPENDED | CLOSED']
  createdAt timestamp
  updatedAt timestamp
}

Table BILLING_SERVICE_BILLING_CYCLE {
  id uuid [primary key]
  billingAccountId uuid [not null]
  cycleType varchar [note: 'MONTHLY | QUARTERLY']
  periodStart date
  periodEnd date
  status varchar [note: 'OPEN | CLOSED | INVOICED']
}

Table BILLING_SERVICE_INVOICE {
  id uuid [primary key]
  invoiceNumber varchar [unique]
  billingAccountId uuid [not null]
  billingCycleId uuid
  subscriptionId uuid [note: 'logical ref -> subscription-service.SUBSCRIPTION.id']
  periodStart date
  periodEnd date
  subtotal numeric
  taxAmount numeric
  totalAmount numeric
  currency varchar
  status varchar [note: 'DRAFT | ISSUED | PARTIALLY_PAID | PAID | OVERDUE | CANCELLED']
  issuedAt timestamp
  dueDate date
  paidAt timestamp
  createdAt timestamp
}

Table BILLING_SERVICE_INVOICE_ITEM {
  id uuid [primary key]
  invoiceId uuid [not null]
  productCode varchar
  description varchar
  quantity numeric
  unitPrice numeric
  taxRate numeric
  totalPrice numeric
}

Table BILLING_SERVICE_TAX_RATE {
  id uuid [primary key]
  code varchar [unique]
  name varchar
  percentage numeric
  validFrom date
  validTo date
}

Table BILLING_SERVICE_OUTBOX_EVENT {
  id uuid [primary key]
  aggregateId uuid [note: 'soft ref - heterojen aggregate tipleri, FK YOK']
  aggregateType varchar
  eventType varchar
  payloadJson jsonb
  status varchar [note: 'PENDING | PUBLISHED | FAILED']
  createdAt timestamp
  publishedAt timestamp
}

Table BILLING_SERVICE_PROCESSED_EVENT {
  id uuid [primary key]
  eventId uuid [unique]
  eventType varchar
  sourceService varchar
  aggregateId uuid
  processedAt timestamp
  status varchar [note: 'PROCESSED | FAILED']
  errorMessage varchar
  createdAt timestamp
}

// --- Servis ici fiziksel FK iliskileri ---
Ref billing_account_cycles:    BILLING_SERVICE_BILLING_CYCLE.billingAccountId > BILLING_SERVICE_BILLING_ACCOUNT.id  // N-1, physical FK
Ref billing_account_invoices:  BILLING_SERVICE_INVOICE.billingAccountId       > BILLING_SERVICE_BILLING_ACCOUNT.id  // N-1, physical FK
Ref billing_invoice_cycle:     BILLING_SERVICE_INVOICE.billingCycleId         > BILLING_SERVICE_BILLING_CYCLE.id    // N-1, physical FK (nullable)
Ref billing_invoice_items:     BILLING_SERVICE_INVOICE_ITEM.invoiceId         > BILLING_SERVICE_INVOICE.id          // N-1, physical FK
